Alterado item no footer

--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
 					<div class="footer_col">
 						<div class="footer_content footer_about">
 							<div class="logo_container footer_logo">
-								<div class="logo"><a href="#"><img src="images/logo.png" alt="">travelix</a></div>
+								<div class="logo"><a href="#"><img src="images/logo.png" alt="">Paradise</a></div>
 							</div>
 							<ul class="footer_social_list">
 								<li class="footer_social_item"><a href="#"><i class="fa fa-facebook-f"></i></a></li>
